test/corpus/01-document-frontmatter.txt
==================
Empty document
==================

---

(source_file)

==================
Frontmatter only
==================

---
title: Hello
---

---

(source_file
  (paragraph
    (text)
    (text)
    (text)))

==================
Document without frontmatter
==================

Hello world

---

(source_file
  (paragraph
    (text)))

==================
Frontmatter and body
==================

---
title: Doc
---

First paragraph

---

(source_file
  (paragraph
    (text)
    (text)
    (text))
  (paragraph
    (text)))
