test/corpus/05-lists.txt
=======================================
Simple unordered list
=======================================

- Item one
- Item two
- Item three

---

(source_file
  (list
    (list_item
      (list_marker)
      (list_paragraph
        (text)))
    (list_item
      (list_marker)
      (list_paragraph
        (text)))
    (list_item
      (list_marker)
      (list_paragraph
        (text)))))

=======================================
Simple ordered list
=======================================

1. First item
2. Second item
3. Third item

---

(source_file
  (list
    (list_item
      (list_marker)
      (list_paragraph
        (text)))
    (list_item
      (list_marker)
      (list_paragraph
        (text)))
    (list_item
      (list_marker)
      (list_paragraph
        (text)))))

=======================================
Mixed unordered markers
=======================================

- Dash item
* Asterisk item
+ Plus item

---

(source_file
  (list
    (list_item
      (list_marker)
      (list_paragraph
        (text)))
    (list_item
      (list_marker)
      (list_paragraph
        (text)))
    (list_item
      (list_marker)
      (list_paragraph
        (text)))))

=======================================
List with blank line separation
=======================================

- Item one

- Item two

---

(source_file
  (list
    (list_item
      (list_marker)
      (list_paragraph
        (text))))
  (list
    (list_item
      (list_marker)
      (list_paragraph
        (text)))))

=======================================
List after heading
=======================================

# My List

- Item one
- Item two

---

(source_file
  (heading
    (heading_marker)
    (heading_text))
  (list
    (list_item
      (list_marker)
      (list_paragraph
        (text)))
    (list_item
      (list_marker)
      (list_paragraph
        (text)))))

=======================================
List before paragraph
=======================================

- Item one
- Item two

Regular paragraph text.

---

(source_file
  (list
    (list_item
      (list_marker)
      (list_paragraph
        (text)))
    (list_item
      (list_marker)
      (list_paragraph
        (text))))
  (paragraph
    (text)))

=======================================
Nested unordered list (simple)
=======================================

- Parent item
  - Child item
  - Another child

---

(source_file
  (list
    (list_item
      (list_marker)
      (list_paragraph
        (text)
        (text)
        (text)))))

=======================================
Nested ordered list
=======================================

1. First level
   1. Second level
   2. Another second level

---

(source_file
  (list
    (list_item
      (list_marker)
      (list_paragraph
        (text)))
    (list_item
      (list_marker)
      (list_paragraph
        (text)))
    (list_item
      (list_marker)
      (list_paragraph
        (text)))))

=======================================
Deeply nested unordered list
=======================================

- Top level
  - Level two
    - Level three
      - Level four

---

(source_file
  (list
    (list_item
      (list_marker)
      (list_paragraph
        (text)
        (text)
        (text)
        (text)))))

=======================================
Mixed ordered and unordered nesting
=======================================

1. First ordered
   - Nested unordered
     1. Nested ordered again
   - Another nested unordered
2. Second ordered

---

(source_file
  (list
    (list_item
      (list_marker)
      (list_paragraph
        (text)
        (text)
        (text)
        (text)))
    (list_item
      (list_marker)
      (list_paragraph
        (text)))))
