test/corpus/07-html.txt
=======================================
HTML block - simple div
=======================================

<div>
Content inside
</div>

---

(source_file
  (paragraph
    (html_inline)))

=======================================
HTML block with attributes
=======================================

<div class="container" id="main">
Content
</div>

---

(source_file
  (paragraph
    (html_inline)))

=======================================
Self-closing HTML tag
=======================================

<img src="image.png" alt="Image" />

---

(source_file
  (paragraph
    (html_inline)))

=======================================
HTML comment block
=======================================

<!-- This is a comment -->

---

(source_file
  (html_comment))

=======================================
Inline HTML in paragraph
=======================================

This is text with <span>inline HTML</span> inside.

---

(source_file
  (paragraph
    (text)
    (html_inline)
    (text)))

=======================================
Multiple inline HTML elements
=======================================

Text with <strong>bold</strong> and <em>italic</em> HTML.

---

(source_file
  (paragraph
    (text)
    (html_inline)
    (text)
    (html_inline)
    (text)))

=======================================
HTML block before paragraph
=======================================

<div>HTML content</div>

Regular paragraph text.

---

(source_file
  (paragraph
    (html_inline))
  (paragraph
    (text)))

=======================================
HTML block after heading
=======================================

# Heading

<div class="content">
Some content
</div>

---

(source_file
  (heading
    (heading_marker)
    (heading_text))
  (paragraph
    (html_inline)))

=======================================
Inline HTML with self-closing tag
=======================================

Text with <br /> line break.

---

(source_file
  (paragraph
    (text)
    (html_inline)
    (text)))
