test/corpus/08-paragraphs-and-lists.txt
===================
Basic paragraphs
===================

Hello world
This is part of the first paragraph

This is a second paragraph

---

(source_file
  (paragraph
    (text)
    (text))
  (paragraph
    (text)))

===================
List with paragraphs
===================

- List item 1 with text
- List item 2
  with continuation line

---

(source_file
  (paragraph
    (text))
  (paragraph
    (text)
    (text)))

===================
Mixed blocks and lists
===================

Some text

- List item
- Another item

More text after list

---

(source_file
  (paragraph
    (text))
  (paragraph
    (text))
  (paragraph
    (text))
  (paragraph
    (text)))
