test/corpus/09-newlines-and-blank-lines.txt
================================================================================
Simple paragraph (no newlines)
================================================================================

Hello world

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (text)))

================================================================================
Multi-line paragraph with line continuation
================================================================================

This is a paragraph
that spans multiple lines
and should be treated as one

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (text)
    (text)
    (text)))

================================================================================
Two paragraphs separated by blank line
================================================================================

First paragraph

Second paragraph

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (text))
  (paragraph
    (text)))

================================================================================
List with items separated by newlines
================================================================================

- Item one
- Item two
- Item three

--------------------------------------------------------------------------------

(source_file
  (list
    (list_item
      (list_marker)
      (list_paragraph
        (text)))
    (list_item
      (list_marker)
      (list_paragraph
        (text)))
    (list_item
      (list_marker)
      (list_paragraph
        (text)))))

================================================================================
Code block with newlines preserved
================================================================================

```
line one
line two
line three
```

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open)
    (code)
    (code_fence_close)))

================================================================================
Blank line with only whitespace
================================================================================

Paragraph one
  
Paragraph two

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (text)
    (text)
    (text)))
