test/corpus/10-annotations-and-variables.txt
=============================================================================
Inline annotations
=============================================================================

Text {% width="25%" %} more text.

-----------------------------------------------------------------------------

(source_file
  (paragraph
    (text)
    (tag_open
      (tag_name)
      (attribute
        (attribute_name)
        (attribute_value
          (string))))
    (text)))

=============================================================================
Inline variable tag
=============================================================================

Hello {% $markdoc.frontmatter.title %}.

-----------------------------------------------------------------------------

(source_file
  (paragraph
    (text)
    (inline_tag_expression
      expression: (member_expression
        object: (member_expression
          object: (variable
            (identifier))
          property: (identifier))
        property: (identifier)))
    (text)))

=============================================================================
Inline function tag
=============================================================================

Title {% titleCase($markdoc.frontmatter.title) %} here.

-----------------------------------------------------------------------------

(source_file
  (paragraph
    (text)
    (inline_tag_expression
      expression: (call_expression
        (identifier)
        (expression
          (member_expression
            object: (member_expression
              object: (variable
                (identifier))
              property: (identifier))
            property: (identifier)))))
    (text)))
